<resources>
    <string name="app_name">PriceWatch</string>
    <string name="register">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="already_user">Already a PriceWatch user?</string>
    <string name="sign_in">Sign-in</string>
    <string name="login">Login</string>
    <string name="not_user">New to PriceWatch?</string>
    <string name="sign_up">Sign-up</string>
    <string name="search">Search</string>
    <string name="search_info">Select a distributor</string>
    <string name="harvey_norman">Harvey Norman</string>
    <string name="currys_pcworld">Curry\'s PC World</string>
    <string name="list">Price List</string>
    <string name="no_prices">Currently tracking no prices.</string>
    <string name="my_prices">My Prices:</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>