<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_info"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="normal"
        android:textColor="@color/dark_grey"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_title" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_card"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_info"
        android:layout_marginTop="@dimen/size_large"
        app:cardCornerRadius="@dimen/rad_small">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:paddingBottom="@dimen/size_small">

            <EditText
                android:layout_width="250dp"
                android:layout_height="50sp"
                android:id="@+id/login_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:paddingStart="@dimen/size_small"
                android:paddingEnd="@dimen/size_small"
                android:textColorHint="@color/medium_grey"
                android:background="@drawable/border_stroke"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="50sp"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingStart="@dimen/size_small"
                android:paddingEnd="@dimen/size_small"
                android:textColorHint="@color/medium_grey"
                android:background="@drawable/border_stroke"
                android:layout_marginTop="@dimen/size_small"/>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_small"
                android:gravity="end">

                <Button
                    android:id="@+id/login_submit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_card"
        android:layout_marginTop="@dimen/size_xlarge">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_user"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_link"
        android:text="@string/sign_up"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:textStyle="normal"
        android:paddingLeft="@dimen/size_small"/>
    </LinearLayout>
</RelativeLayout>