<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_title"
        android:text="@string/search"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_xlarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_info"
        android:text="@string/search_info"
        android:textSize="@dimen/body_text"
        android:textStyle="normal"
        android:textColor="@color/dark_grey"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/search_title"/>

    <androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/search_info"
        android:layout_marginTop="@dimen/size_large"
        app:cardCornerRadius="@dimen/rad_small">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:paddingBottom="@dimen/size_small">

            <Button
                android:id="@+id/harvey_button"
                android:layout_width="@dimen/button_large"
                android:layout_height="wrap_content"
                android:text="@string/harvey_norman" />

            <Button
                android:id="@+id/currys_button"
                android:layout_width="@dimen/button_large"
                android:layout_height="wrap_content"
                android:text="@string/currys_pcworld"
                android:layout_marginTop="@dimen/size_small"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>